# GoITPythonCourseV7

./: README.md  privat.py
module09/: _data_classes.py
module12/: 02.py  fp_ex.py  pyproject.toml
